--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,67 @@ a {
   border: solid 1px var(--white);
   border-radius: 50%;
 }
+
+/* Progress */
+
+/* 3rd progress bar */
+.mask .fill {
+  clip: rect(0, 50px, 100px, 0);
+  background-color: #227ded;
+}
+
+.mask.full,
+.circle .fill {
+  animation: fill ease-in-out 3s;
+  transform: rotate(135deg);
+}
+
+.circle-wrap {
+  margin: 100px auto;
+  width: 100px;
+  height: 100px;
+  background: var(--white);
+  border-radius: 50%;
+  border: 1px solid #cdcbd0;
+}
+
+.circle-wrap .circle .mask,
+.circle-wrap .circle .fill {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.circle-wrap .circle .mask {
+  clip: rect(0, 100px, 100px, 50px);
+}
+
+.circle-wrap .inside-circle {
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  border: 1px solid #cdcbd0;
+  background: white;
+  line-height: 70px;
+  text-align: center;
+  margin-top: 14px;
+  margin-left: 14px;
+  color: #1e51dc;
+  position: absolute;
+  z-index: 100;
+  font-weight: 700;
+  font-size: 2em;
+}
+
+/* color animation */
+
+@keyframes fill {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(135deg);
+  }
+}
