--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+/* ============= Global ========== */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 body {
-  margin: 0;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -21,11 +29,10 @@ body {
   cursor: pointer;
 }
 
-/* NAVBAR */
+/* ========================= NAVBAR================ */
 .header {
-  font-family: 'Montserrat', sans-serif;
   border-bottom: 1px solid var(--white);
-  padding: 0 5rem 0 5rem;
+  padding: 0 7rem 0 7rem;
 }
 
 .navBar {
@@ -38,7 +45,7 @@ body {
 .block1 {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 5rem;
   flex: 2;
 }
 
@@ -87,14 +94,47 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 2rem;
-  height: 2rem;
+  width: 3rem;
+  height: 3rem;
   padding: 0.875rem;
   border: solid 1px var(--white);
   border-radius: 50%;
 }
 
-/* Progress */
+/* ============== Progress ================== */
+.progressInfo {
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+}
+
+.percentComplete {
+  font-size: 2rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: var(--black-two);
+}
+
+.completed {
+  opacity: 0.5;
+  font-size: 0.875rem;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: var(--black-two);
+}
 
 /* 3rd progress bar */
 .mask .fill {
@@ -110,8 +150,8 @@ a {
 
 .circle-wrap {
   margin: 100px auto;
-  width: 100px;
-  height: 100px;
+  width: 108px;
+  height: 108px;
   background: var(--white);
   border-radius: 50%;
   border: 1px solid #cdcbd0;
@@ -119,19 +159,19 @@ a {
 
 .circle-wrap .circle .mask,
 .circle-wrap .circle .fill {
-  width: 100px;
-  height: 100px;
+  width: 108px;
+  height: 108px;
   position: absolute;
   border-radius: 50%;
 }
 
 .circle-wrap .circle .mask {
-  clip: rect(0, 100px, 100px, 50px);
+  clip: rect(0, 108px, 108px, 50px);
 }
 
 .circle-wrap .inside-circle {
-  width: 72px;
-  height: 72px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   border: 1px solid #cdcbd0;
   background: white;
@@ -156,4 +196,157 @@ a {
   100% {
     transform: rotate(135deg);
   }
+}
+
+/* ========== BOOK ============= */
+
+.bookCard {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 10.625rem;
+  margin: 0 5rem 0 5rem;
+  padding: 2rem 9.188rem 1.625rem 1.688rem;
+  border-radius: 4px;
+  border: solid 1px var(--white);
+  background-color: #fff;
+}
+
+.bookInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.infos {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.bookCategory {
+  opacity: 0.5;
+  font-size: 0.875rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: var(--black-two);
+}
+
+.bookTitle {
+  font-family: 'Roboto Slab', serif;
+  font-size: 1.375rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.2px;
+  color: var(--black-two);
+}
+
+.bookAuthor {
+  font-family: 'Roboto Slab', serif;
+  font-size: 0.875rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #4386bf;
+}
+
+.actions {
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+}
+
+.actionItem {
+  font-family: 'Roboto Slab', serif;
+  font-size: 0.875rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #4386bf;
+  cursor: pointer;
+}
+
+.separator {
+  color: var(--white);
+}
+
+.actions button {
+  background-color: transparent;
+  border: none;
+}
+
+.bookProgress {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.bookProgress li {
+  padding: 10px;
+}
+
+.bookProgress li:first-child {
+  border-right: solid 1px var(--white);
+  padding: 10px 50px 10px 20px;
+}
+
+.currentChapterContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.currentChapter {
+  opacity: 0.5;
+  font-family: 'Roboto Slab', serif;
+  font-size: 0.813rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: var(--black-two);
+}
+
+.chapter {
+  font-family: 'Roboto Slab', serif;
+  font-size: 0.813rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: var(--black-two);
+}
+
+.updateBtn {
+  width: 11.5rem;
+  height: 2.063rem;
+  margin-top: 1rem;
+  padding: 0.438rem 1.188rem 0.5rem 1.375rem;
+  border: none;
+  border-radius: 3px;
+  background-color: #0290ff;
+  cursor: pointer;
+
+  /* Text */
+  text-transform: uppercase;
+  font-size: 0.813rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.5px;
+  text-align: center;
+  color: #fff;
 }
