--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
 :root {
   --black-two: #121212;
   --white: #e8e8e8;
+  --input-text: #c4c4c4;
 }
 
 .material-symbols-outlined {
@@ -29,7 +30,7 @@ body {
   cursor: pointer;
 }
 
-/* ========================= NAVBAR================ */
+/* ========================= NAVBAR COMPONENT ================ */
 .header {
   border-bottom: 1px solid var(--white);
   padding: 0 7rem 0 7rem;
@@ -101,7 +102,7 @@ a {
   border-radius: 50%;
 }
 
-/* ============== Progress ================== */
+/* ============== Progress COMPONENT ================== */
 .progressInfo {
   height: 5rem;
   display: flex;
@@ -198,7 +199,7 @@ a {
   }
 }
 
-/* ========== BOOK ============= */
+/* ========== BOOK COMPONENT============= */
 
 .bookCard {
   display: flex;
@@ -340,9 +341,73 @@ a {
   cursor: pointer;
 
   /* Text */
+  font-family: 'Roboto Slab', serif;
   text-transform: uppercase;
   font-size: 0.813rem;
   font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.5px;
+  text-align: center;
+  color: #fff;
+}
+
+/* FORM COMPONENT */
+
+.line {
+  margin: 2rem 5rem 1rem 5rem;
+  border: solid 1px var(--white);
+}
+
+.formSection {
+  margin: 0 5rem 0 5rem;
+  flex: 1;
+}
+
+form {
+  display: flex;
+  flex: 1;
+  margin-top: 1.2rem;
+  gap: 2rem;
+}
+
+form :first-child {
+  flex: 2;
+}
+
+.formTitle {
+  font-size: 1.25rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.18px;
+  color: #888;
+}
+
+.inputField {
+  padding: 1em;
+  width: 20rem;
+  color: var(--input-text);
+  border-radius: 4px;
+  border: solid 1px var(--white);
+  background-color: #fff;
+  outline: none;
+}
+
+.addBook {
+  width: 11.5rem;
+  padding: 1em;
+  border: none;
+  border-radius: 3px;
+  background-color: #0290ff;
+  cursor: pointer;
+
+  /* Text */
+  font-family: 'Roboto Slab', serif;
+  font-size: 0.813rem;
+  font-weight: bold;
   font-stretch: normal;
   font-style: normal;
   line-height: normal;
